@@ -1,5 +1,12 @@
 2009-05-28  Tobias C. Rittweiler  <tcr@freebits.de>
 
+	* slime.el (slime-dispatch-event :emacs-rex): Make sure that we
+	pop the continuation on erroneous send.
+
+	Patch by Mark Cox <markcox80@gmail.com>.
+
+2009-05-28  Tobias C. Rittweiler  <tcr@freebits.de>
+
 	* swank.lisp (tokenize-symbol-thoroughly): Make it work correctly
 	on escaped symbols.
 
